--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
         "build": "vite build"
     },
     "devDependencies": {
+        "@tailwindcss/forms": "^0.5.3",
         "autoprefixer": "^10.4.9",
         "axios": "^0.27",
         "laravel-vite-plugin": "^0.6.0",
